package ucf.assignments.warehouse;/*
 * UCF COP3330 Summer 2021 Assignment 5 Solution
 * Copyright 2021 Stephan Hartig
 */

public class Warehouse {
}
